# tg-services

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_FINAL.md  Makefile  PLAN_B.md  PLAN_MODULAR.md  README.md  docker-compose.yml  pyproject.toml  test_imports.py
src/application/billing/: use_case.py
src/application/posting/: rotate_post.py
src/application/scheduler/: posting.py  stats.py
src/application/stats/: scrape_channel.py  scrape_channel_stats.py
src/cli/: __init__.py  dlq.py
src/core/: config.py  database.py  metrics.py  redis.py  schema_validator.py
src/domain/entities/: post.py
src/domain/events/: post_published.py
src/domain/interfaces/: infrastructure.py  stats.py
src/domain/repositories/: platform_repository.py  post_repository.py
src/domain/value_objects/: device_fingerprint.py  post_id.py
src/entrypoints/: broker.py  health.py  worker.py
src/infrastructure/alerts/: telegram_alerter.py
src/infrastructure/idempotency/: redis_idempotency.py
src/infrastructure/locking/: redis_lock.py
src/infrastructure/media/: downloader.py
src/infrastructure/queue/: dlq.py  dlq_middleware.py
src/infrastructure/retry/: policy.py
src/infrastructure/telegram/: bot_pool.py  circuit_breaker.py  errors.py  proxy_manager.py  rate_limiter.py  redis_circuit_breaker.py  redis_rate_limiter.py  userbot_pool.py
src/shared/schemas/: tasks.py
src/tasks/: __init__.py  billing.py  posting.py  stats.py
src/tasks/scheduler/: __init__.py  leader.py
tests/unit/domain/: test_post.py
(+9 files in other folders)
