[project]
name = "tad-worker"
version = "3.0.0"
description = "Production-ready Telegram posting worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
    "redis>=5.0",
    "aiogram>=3.0",
    "telethon>=1.34",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "prometheus-client>=0.19",
    "sentry-sdk>=1.40",
    "aiohttp>=3.9",
    "aiolimiter>=1.1",
    "uvloop>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-redis>=4.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20", "SIM", "RET"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
